--- a/frontend/src/components/Navigation/Navbar.css
+++ b/frontend/src/components/Navigation/Navbar.css
@@ -164,17 +164,17 @@
         visibility: visible;
         position: absolute;
         top: 50%;
-        right: 15%;
+        right: 16%;
         transform: translate(-50%,-50%);
         border: 1px solid #EDEEF7;
         border-radius: 50%;
         background-color: #EDEEF7;
         cursor: pointer;
         padding: .2rem .35rem;
-        font-size: .5rem;
+        font-size: .7rem;
     }
     .navbar__profile {
         padding: .2rem .35rem;
-        font-size: .5rem;
+        font-size: .7rem;
     }
 }
